--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Đọc dữ liệu từ file CSV\n",
     "file_path = \"data\\data.csv\"\n",
     "data = pd.read_csv(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 30000 entries, 0 to 29999\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   Paragraph  30000 non-null  object\n",
+      " 1   Topic      30000 non-null  object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 468.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Paragraph</th>\n",
+       "      <th>Topic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Khoảng 6h30, thiếu niên ngụ xã Thượng Quận, th...</td>\n",
+       "      <td>Thời sự</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hai xe đối đầu tạo tiếng động mạnh, ba người đ...</td>\n",
+       "      <td>Thời sự</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Camera hành trình của ôtô đi trên đoạn đường đ...</td>\n",
+       "      <td>Thời sự</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Camera hành trình ghi lại vụ tai nạn sáng 6/12.</td>\n",
+       "      <td>Thời sự</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Đoạn đường xảy ra tai nạn không có dải phân cá...</td>\n",
+       "      <td>Thời sự</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           Paragraph    Topic\n",
+       "0  Khoảng 6h30, thiếu niên ngụ xã Thượng Quận, th...  Thời sự\n",
+       "1  Hai xe đối đầu tạo tiếng động mạnh, ba người đ...  Thời sự\n",
+       "2  Camera hành trình của ôtô đi trên đoạn đường đ...  Thời sự\n",
+       "3    Camera hành trình ghi lại vụ tai nạn sáng 6/12.  Thời sự\n",
+       "4  Đoạn đường xảy ra tai nạn không có dải phân cá...  Thời sự"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
    ]
   },
   {
@@ -62,6 +165,54 @@
     "topic_counts = data['Topic'].value_counts()\n",
     "print(\"Topic distribution:\")\n",
     "print(topic_counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Paragraph    0\n",
+       "Topic        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    30000.000000\n",
+      "mean       262.547333\n",
+      "std        115.296375\n",
+      "min         38.000000\n",
+      "25%        181.000000\n",
+      "50%        252.000000\n",
+      "75%        332.000000\n",
+      "max       2419.000000\n",
+      "Name: text_length, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "data['text_length'] = data['Paragraph'].apply(len)\n",
+    "print(data['text_length'].describe())"
    ]
   },
   {
